# eve

./: .envrc.sample  .gitignore  README.md  docker-compose.yml
app/: index.html  package.json
server/: .gitignore  Cargo.toml
server/migrations/: 20221020115125_init_database.down.sql  20221020115125_init_database.up.sql  20221021153559_create_session.down.sql  20221021153559_create_session.up.sql  20221022095413_create_project.down.sql  20221022095413_create_project.up.sql
server/src/: api.rs  auth.rs  main.rs  session.rs
server/src/api/: files.rs  mod.rs  projects.rs  todo_files.rs  todos.rs  users.rs
