[package]
name = "eve-server"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.5", features = ["json"] }
anyhow = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "time"] }
serde = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"
