[package]
name = "eve-server"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.5", features = ["json"] }
anyhow = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "time", "chrono"] }
serde = "1.0"
serde_json = "1.0"
bcrypt = "0.13"
tower-cookies = "0.7"
uuid = { version = "1.2", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }

tracing = "0.1"
tracing-subscriber = "0.3"
